fix: stop hover answers on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,13 @@ body {
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
 }
-.btn:hover {
-  background-color: var(--color-darkest) !important;
-  border: 1px solid var(--color-dark) !important;
+@media (min-width:992px) {
+  .btn:hover {
+    background-color: var(--color-darkest) !important;
+    border: 1px solid var(--color-dark) !important;
+  }  
 }
+
 
 .btn.option,
 .btn.option:disabled {
